# gq-filter

./: .gitignore  Dockerfile.build-linux  README.md  README_linux.md  README_macos.md  README_windows.md  RELEASE.md  main.py  pyproject.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
lib/: filter.py
packaging/: gqfilter.spec  gqfilter.wxs  gqfilter_linux.spec  gqfilter_macos.spec  pdal_filter.spec
scripts/: build_linux.sh  build_macos.sh  build_msi.ps1  build_windows.ps1
