[project]
name = "gq-pointcloud"
version = "0.1.0"
description = "PDAL Filter CLI for Point Cloud Processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "pdal>=2.9.0",
    "pytest>=9.0.2",
    "setuptools>=61.0",
    "pye57>=0.4.1",
    "numpy>=2.0.0",
]

[project.scripts]
gq-filter = "main:main"

[tool.setuptools]
# lib フォルダをプログラムのパッケージとして認識させます
packages = ["lib"]
# ルートにある main.py をモジュールとして認識させます
py-modules = ["main"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
